Fix coding style using peer review